--- a/src/app/features/portfolio/portfolio.component.scss
+++ b/src/app/features/portfolio/portfolio.component.scss
@@ -5,7 +5,7 @@
 
 .portfolio-title {
   font-size: $font-size-xlarge;
-  justify-self: center;
+  text-align: center;
 }
 
 .portfolio-container {
@@ -22,9 +22,8 @@
   padding: 2rem;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition:
-    transform 0.2s,
-    box-shadow 0.2s;
+  transition: transform 0.2s,
+  box-shadow 0.2s;
 
   &:hover {
     transform: scale(1.05);
@@ -59,11 +58,7 @@
       color: #555;
 
       img {
-        height: 1rem;
-
-        @include media-query-min('m') {
-          height: 2rem;
-        }
+        height: 2rem;
       }
     }
   }
