--- a/src/app/features/work/work.component.scss
+++ b/src/app/features/work/work.component.scss
@@ -5,7 +5,7 @@
 
 .timeline-title {
   font-size: $font-size-xlarge;
-  justify-self: center;
+  text-align: center;
 }
 
 .timeline {
@@ -65,9 +65,8 @@
     border-radius: 50%;
     background-color: var(--background-color-alternative_3);
     cursor: pointer;
-    transition:
-      transform 0.2s,
-      background-color 0.2s;
+    transition: transform 0.2s,
+    background-color 0.2s;
     position: absolute;
     top: 51%;
     left: 50.32%;
